--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@ figcaption {
   background: url(../images/white-wood.jpg) no-repeat center top;
   background-size: cover;
 }
-
-background: #efefef; /* Old browsers */
+.light-fade{
+  background: #efefef; /* Old browsers */
 background: -moz-linear-gradient(
   top,
   #efefef 0%,
@@ -90,7 +90,11 @@ background: linear-gradient(
   #dddddd 100%
 ); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#efefef", endColorstr="#dddddd", GradientType=0); /* IE6-9 */
+}
 
+.medium-fade{
+  
+}
 
 /*/////// MEDIA ////////*/
 
