automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,8 @@ header {
 #navbar nav a {
   display: inline-block;
   width: 16.666667%;
+  margin: 0;
+  padding: 22px 0;
 }
 
 /*////////// LOGO //////////*/
