--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,9 @@ section {
 
 /*////////// DETAILS //////////*/
 
-
+#details {
+  border-top: 1px solid white;
+}
 
 #details div {
   height: 221px;
